--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="module" src="./task1.js"></script>
+    <!-- <script type="module" src="/js/task1.js"></script> -->
+    <!-- <script type="module" src="/js/task2.js"></script> -->
+    <script type="module" src="/js/task3.js"></script>
 </body>
 </html>
